feat: 定义报警管理.历史事件和报警.故障详情中处理办法录入API
